// Original code from https://www.youtube.com/watch?v=6Ol6zeocR28&t=100s

syntax = "proto3";

package task;

option go_package = "go-study/task/pb";

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message CreateTaskResponse {
  string id = 1;
  string title = 2;
  string description = 3;
}

message ListTasksRequest {}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
}

service TaskManager {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);

  rpc ListTasks(ListTasksRequest) returns (stream Task);
}